--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My Awesome Data Display-er</string>
+    <string name="id_prefix">\"ID:\"</string>
 </resources>
